--- a/Sunduk.PWA/Components/RadiusComponent.razor
+++ b/Sunduk.PWA/Components/RadiusComponent.razor
@@ -6,12 +6,13 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
     <MudGrid Spacing="1">
         <MudItem xs="12" sm="6">
-            <MudField Label="Параметры скругления" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-1">
+            <MudField Label="Параметры скругления" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-1"
+            @onfocusout="(() => CurrentImage = RadiusType == Radius.External ? Images.ExternalRadius : Images.InternalRadius)">
                 <MudGrid Spacing="0">
                     <MudItem xs="12">
-                        <MudRadioGroup @bind-SelectedOption="@RadiusType" Class="mb-n2 d-flex justify-center">
-                            <MudRadio Option="@Radius.External" Color="Color.Primary" @onfocus="SetExternalType">Наружное</MudRadio>
-                            <MudRadio Option="@Radius.Internal" Color="Color.Primary" @onfocus="SetInternalType">Внутреннее</MudRadio>
+                        <MudRadioGroup SelectedOptionChanged="OnRadiusTypeChanged" T="Radius"  Class="mb-n2 d-flex justify-center">
+                            <MudRadio Option="@Radius.External" Color="Color.Primary">Наружное</MudRadio>
+                            <MudRadio Option="@Radius.Internal" Color="Color.Primary">Внутреннее</MudRadio>
                         </MudRadioGroup>
                     </MudItem>
                     <MudItem xs="12">
@@ -38,68 +39,68 @@
                     @if (CurrentImage == Images.ExternalRadius)
                     {
                         <center>
-                            <img src="/img/stuffimages/radius/ext_raduis.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                            <img src="/img/stuffimages/radius/ext_radius_n.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                         </center>
                     }
                     @if (CurrentImage == Images.InternalRadius)
                     {
                         <center>
-                            <img src="/img/stuffimages/radius/ext_raduis.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                            <img src="/img/stuffimages/radius/int_radius_n.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                         </center>
                     }
                     @if (CurrentImage == Images.ExternalRadiusSize)
                     {
                         <center>
-                            <img src="/img/stuffimages/radius/ext_part_radius.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                            <img src="/img/stuffimages/radius/ext_part_radius_n.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                         </center>
                     }
                     @if (CurrentImage == Images.ExternalPartDiameter)
                     {
                         <center>
-                            <img src="/img/stuffimages/radius/ext_part_diam.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                            <img src="/img/stuffimages/radius/ext_part_diam_n.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                         </center>
                     }
                     @if (CurrentImage == Images.ExternalToolRadius)
                     {
                         <center>
-                            <img src="/img/stuffimages/radius/ext_tool_radius.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                            <img src="/img/stuffimages/radius/ext_tool_radius_n.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                         </center>
                     }
                     @if (CurrentImage == Images.InternalRadiusSize)
                     {
                         <center>
-                            <img src="/img/stuffimages/radius/int_part_radius.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                            <img src="/img/stuffimages/radius/int_part_radius_n.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                         </center>
                     }
                     @if (CurrentImage == Images.InternalPartDiameter)
                     {
                         <center>
-                            <img src="/img/stuffimages/radius/int_part_diam.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                            <img src="/img/stuffimages/radius/int_part_diam_n.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                         </center>
                     }
                     @if (CurrentImage == Images.InternalToolRadius)
                     {
                         <center>
-                            <img src="/img/stuffimages/radius/int_tool_radius.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
+                            <img src="/img/stuffimages/radius/int_tool_radius_n.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                         </center>
                     }
                 </MudCardContent>
             </MudCard>
         </MudItem>
         <div>
-            <img src="/img/stuffimages/radius/ext_radius.svg" asp-append-version="true" width="0" height="0" />
-            <img src="/img/stuffimages/radius/int_radius.svg" asp-append-version="true" width="0" height="0" />
-            <img src="/img/stuffimages/radius/ext_part_radius.svg" asp-append-version="true" width="0" height="0" />
-            <img src="/img/stuffimages/radius/ext_part_diam.svg" asp-append-version="true" width="0" height="0" />
-            <img src="/img/stuffimages/radius/ext_tool_radius.svg" asp-append-version="true" width="0" height="0"/>
-            <img src="/img/stuffimages/radius/ext_tool_radius.svg" asp-append-version="true" width="0" height="0"/>
-            <img src="/img/stuffimages/radius/int_part_radius.svg" asp-append-version="true" width="0" height="0"/>
-            <img src="/img/stuffimages/radius/int_part_diam.svg" asp-append-version="true" width="0" height="0"/>
-            <img src="/img/stuffimages/radius/int_tool_radius.svg" asp-append-version="true" width="0" height="0"/>
+            <img src="/img/stuffimages/radius/ext_radius_n.svg" asp-append-version="true" width="0" height="0" />
+            <img src="/img/stuffimages/radius/int_radius_n.svg" asp-append-version="true" width="0" height="0" />
+            <img src="/img/stuffimages/radius/ext_part_radius_n.svg" asp-append-version="true" width="0" height="0" />
+            <img src="/img/stuffimages/radius/ext_part_diam_n.svg" asp-append-version="true" width="0" height="0" />
+            <img src="/img/stuffimages/radius/ext_tool_radius_n.svg" asp-append-version="true" width="0" height="0"/>
+            <img src="/img/stuffimages/radius/ext_tool_radius_n.svg" asp-append-version="true" width="0" height="0"/>
+            <img src="/img/stuffimages/radius/int_part_radius_n.svg" asp-append-version="true" width="0" height="0"/>
+            <img src="/img/stuffimages/radius/int_part_diam_n.svg" asp-append-version="true" width="0" height="0"/>
+            <img src="/img/stuffimages/radius/int_tool_radius_n.svg" asp-append-version="true" width="0" height="0"/>
         </div>
         </MudHidden>
         <MudItem xs="12">
-            <MudField Label="Результат" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-n3">
+            <MudField Label="Результат" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-n1">
                 <MudGrid Spacing="1">
                     <MudItem xs="12" Class="mt-2">
                         @if (RadiusDiameter > 0 && RadiusSize > 0)
@@ -148,7 +149,7 @@
 @code 
 {
     readonly int _imgHeigth = 187;
-    readonly int _imgWidth = 300;
+    readonly int _imgWidth = 250;
 
     bool showClassicRadius = true;
 
@@ -224,17 +225,25 @@
     public int ExampleLines { get => RadiusExample.Count(f => f == '\n') + 1; }
 
 
-    private void SetInternalType()
+    //private void SetInternalType()
+    //{
+    //    //if (CurrentImage == Images.ExternalPartDiameter) CurrentImage = Images.InternalPartDiameter;
+    //    //if (CurrentImage == Images.ExternalRadiusSize) CurrentImage = Images.InternalRadiusSize;
+    //    //if (CurrentImage == Images.ExternalToolRadius) CurrentImage = Images.InternalToolRadius;
+    //}
+
+    //private void SetExternalType()
+    //{
+    //    //if (CurrentImage == Images.InternalPartDiameter) CurrentImage = Images.ExternalPartDiameter;
+    //    //if (CurrentImage == Images.InternalRadiusSize) CurrentImage = Images.ExternalRadiusSize;
+    //    //if (CurrentImage == Images.InternalToolRadius) CurrentImage = Images.ExternalToolRadius;
+    //}
+
+    private void OnRadiusTypeChanged(Radius value)
     {
-        if (CurrentImage == Images.ExternalPartDiameter) CurrentImage = Images.InternalPartDiameter;
-        if (CurrentImage == Images.ExternalRadiusSize) CurrentImage = Images.InternalRadiusSize;
-        if (CurrentImage == Images.ExternalToolRadius) CurrentImage = Images.InternalToolRadius;
+        RadiusType = value;
+        if (RadiusType == Radius.External) CurrentImage = Images.ExternalRadius;
+        if (RadiusType == Radius.Internal) CurrentImage = Images.InternalRadius;
     }
 
-    private void SetExternalType()
-    {
-        if (CurrentImage == Images.InternalPartDiameter) CurrentImage = Images.ExternalPartDiameter;
-        if (CurrentImage == Images.InternalRadiusSize) CurrentImage = Images.ExternalRadiusSize;
-        if (CurrentImage == Images.InternalToolRadius) CurrentImage = Images.ExternalToolRadius;
-    }
 }
