--- a/Sunduk.PWA/Pages/OtherStuffPage.razor
+++ b/Sunduk.PWA/Pages/OtherStuffPage.razor
@@ -14,6 +14,9 @@
         <MudTabPanel Text="Глубина центровки">
             <CenterLengthComponent />
         </MudTabPanel>
+        <MudTabPanel Text="Вектора">
+            <VectorComponent />
+        </MudTabPanel>
     </MudTabs>
 </MudSwipeArea>
 
@@ -32,7 +35,7 @@
         }
         else if (direction == SwipeDirection.RightToLeft)
         {
-            if(tabs.ActivePanelIndex < 3)
+            if(tabs.ActivePanelIndex < 4)
             {
                 tabs.ActivatePanel(tabs.ActivePanelIndex + 1);
             }
