--- a/Sunduk.PWA/Components/VectorComponent.razor
+++ b/Sunduk.PWA/Components/VectorComponent.razor
@@ -3,7 +3,7 @@
         <MudItem xs="4">
             <MudCard Outlined="true">
                 <MudCardHeader>
-                    <MudText Typo="Typo.body2">Вектор 4</MudText>
+                    <MudText Typo="Typo.caption">Вектор 4</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <center>
@@ -15,7 +15,7 @@
         <MudItem xs="4">
             <MudCard Outlined="true">
                 <MudCardHeader>
-                    <MudText Typo="Typo.body2">Вектор 8</MudText>
+                    <MudText Typo="Typo.caption">Вектор 8</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <center>
@@ -27,7 +27,7 @@
         <MudItem xs="4">
             <MudCard Outlined="true">
                 <MudCardHeader>
-                    <MudText Typo="Typo.body2">Вектор 3</MudText>
+                    <MudText Typo="Typo.caption">Вектор 3</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <center>
@@ -40,7 +40,7 @@
         <MudItem xs="4">
             <MudCard Outlined="true">
                 <MudCardHeader>
-                    <MudText Typo="Typo.body2">Вектор 6</MudText>
+                    <MudText Typo="Typo.caption">Вектор 6</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <center>
@@ -52,7 +52,7 @@
         <MudItem xs="4">
             <MudCard Outlined="true">
                 <MudCardHeader>
-                    <MudText Typo="Typo.body2">Вектор 0 или 9</MudText>
+                    <MudText Typo="Typo.caption">Вектор 0 / 9</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <center>
@@ -64,7 +64,7 @@
         <MudItem xs="4">
             <MudCard Outlined="true">
                 <MudCardHeader>
-                    <MudText Typo="Typo.body2">Вектор 7</MudText>
+                    <MudText Typo="Typo.caption">Вектор 7</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <center>
@@ -77,7 +77,7 @@
         <MudItem xs="4">
             <MudCard Outlined="true">
                 <MudCardHeader>
-                    <MudText Typo="Typo.body2">Вектор 1</MudText>
+                    <MudText Typo="Typo.caption">Вектор 1</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <center>
@@ -89,7 +89,7 @@
         <MudItem xs="4">
             <MudCard Outlined="true">
                 <MudCardHeader>
-                    <MudText Typo="Typo.body2">Вектор 6</MudText>
+                    <MudText Typo="Typo.caption">Вектор 6</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <center>
@@ -101,7 +101,7 @@
         <MudItem xs="4">
             <MudCard Outlined="true">
                 <MudCardHeader>
-                    <MudText Typo="Typo.body2">Вектор 2</MudText>
+                    <MudText Typo="Typo.caption">Вектор 2</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <center>
