--- a/Sunduk.PWA/Components/VectorComponent.razor
+++ b/Sunduk.PWA/Components/VectorComponent.razor
@@ -5,7 +5,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 4</MudText>
                 </MudCardHeader>
-                <MudCardContent>
+                <MudCardContent Class="pa-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_4.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -17,7 +17,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 8</MudText>
                 </MudCardHeader>
-                <MudCardContent>
+                <MudCardContent Class="pa-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_8.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -29,7 +29,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 3</MudText>
                 </MudCardHeader>
-                <MudCardContent>
+                <MudCardContent Class="pa-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_3.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -42,7 +42,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 6</MudText>
                 </MudCardHeader>
-                <MudCardContent>
+                <MudCardContent Class="pa-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_5.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -54,7 +54,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 0 / 9</MudText>
                 </MudCardHeader>
-                <MudCardContent>
+                <MudCardContent Class="pa-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_0-9.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -66,7 +66,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 7</MudText>
                 </MudCardHeader>
-                <MudCardContent>
+                <MudCardContent Class="pa-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_7.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -79,7 +79,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 1</MudText>
                 </MudCardHeader>
-                <MudCardContent>
+                <MudCardContent Class="pa-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_1.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -91,7 +91,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 6</MudText>
                 </MudCardHeader>
-                <MudCardContent>
+                <MudCardContent Class="pa-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_6.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
@@ -103,7 +103,7 @@
                 <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 2</MudText>
                 </MudCardHeader>
-                <MudCardContent>
+                <MudCardContent Class="pa-0">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_2.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
                     </center>
