--- a/Sunduk.PWA/Components/VectorComponent.razor
+++ b/Sunduk.PWA/Components/VectorComponent.razor
@@ -4,9 +4,9 @@
     <MudGrid Spacing="1">
         <MudItem xs="4">
             <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 4"))">
-@*                <MudCardHeader>
+                <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 4</MudText>
-                </MudCardHeader>*@
+                </MudCardHeader>
                 <MudCardContent Class="pa-1">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_4.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
@@ -16,9 +16,9 @@
         </MudItem>
         <MudItem xs="4">
             <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 8"))">
-@*                <MudCardHeader>
+                <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 8</MudText>
-                </MudCardHeader>*@
+                </MudCardHeader>
                 <MudCardContent Class="pa-1">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_8.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
@@ -28,9 +28,9 @@
         </MudItem>
         <MudItem xs="4">
             <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 3"))">
-@*                <MudCardHeader>
+                <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 3</MudText>
-                </MudCardHeader>*@
+                </MudCardHeader>
                 <MudCardContent Class="pa-1">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_3.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
@@ -40,10 +40,10 @@
         </MudItem>
 
         <MudItem xs="4">
-            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 6"))">
-@*                <MudCardHeader>
-                    <MudText Typo="Typo.caption">Вектор 6</MudText>
-                </MudCardHeader>*@
+            <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 5"))">
+                <MudCardHeader>
+                    <MudText Typo="Typo.caption">Вектор 5</MudText>
+                </MudCardHeader>
                 <MudCardContent Class="pa-1">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_5.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
@@ -53,9 +53,9 @@
         </MudItem>
         <MudItem xs="4">
             <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 0 / 9"))">
-@*                <MudCardHeader>
+                <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 0 / 9</MudText>
-                </MudCardHeader>*@
+                </MudCardHeader>
                 <MudCardContent Class="pa-1">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_0-9.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
@@ -65,9 +65,9 @@
         </MudItem>
         <MudItem xs="4">
             <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 7"))">
-@*                <MudCardHeader>
+                <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 7</MudText>
-                </MudCardHeader>*@
+                </MudCardHeader>
                 <MudCardContent Class="pa-1">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_7.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
@@ -78,9 +78,9 @@
 
         <MudItem xs="4">
             <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 1"))">
-@*                <MudCardHeader>
+                <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 1</MudText>
-                </MudCardHeader>*@
+                </MudCardHeader>
                 <MudCardContent Class="pa-1">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_1.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
@@ -90,9 +90,9 @@
         </MudItem>
         <MudItem xs="4">
             <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 6"))">
-@*                <MudCardHeader>
+                <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 6</MudText>
-                </MudCardHeader>*@
+                </MudCardHeader>
                 <MudCardContent Class="pa-1">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_6.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
@@ -102,9 +102,9 @@
         </MudItem>
         <MudItem xs="4">
             <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 2"))">
-@*                <MudCardHeader>
+                <MudCardHeader>
                     <MudText Typo="Typo.caption">Вектор 2</MudText>
-                </MudCardHeader>*@
+                </MudCardHeader>
                 <MudCardContent Class="pa-1">
                     <center>
                         <img src="/img/stuffimages/tool_vectors/vector_2.svg" asp-append-version="true" width="@_imgWidth" height="@_imgHeigth" />
